docs: readme fix

--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "@sptruz/convert",
-  "version": "0.0.0-beta.0.0.1",
-  "description": "",
-  "keywords": [],
+  "version": "0.0.0-beta.0.0.2",
+  "description": "@sptruz/convert is a package for a color conversion.",
+  "keywords": [
+    "sptruz",
+    "color",
+    "colour",
+    "convert",
+    "conversion",
+    "converter",
+    "hex",
+    "hsl",
+    "rgb"
+  ],
   "license": "MIT",
   "author": {
     "name": "Mohammad Abu Mattar",
@@ -42,12 +52,12 @@
     "@commitlint/cli": "17.1.2",
     "@commitlint/config-conventional": "17.1.0",
     "@rollup/plugin-typescript": "8.5.0",
-    "@types/node": "18.7.16",
-    "@typescript-eslint/eslint-plugin": "5.36.2",
-    "@typescript-eslint/parser": "5.36.2",
-    "esbuild": "0.15.7",
+    "@types/node": "18.7.19",
+    "@typescript-eslint/eslint-plugin": "5.38.0",
+    "@typescript-eslint/parser": "5.38.0",
+    "esbuild": "0.15.9",
     "esbuild-runner": "2.2.1",
-    "eslint": "8.23.0",
+    "eslint": "8.24.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-simple-import-sort": "8.0.0",
@@ -55,8 +65,8 @@
     "husky": "8.0.1",
     "jest": "29.0.3",
     "prettier": "2.7.1",
-    "rollup": "2.79.0",
-    "ts-jest": "29.0.0",
+    "rollup": "2.79.1",
+    "ts-jest": "29.0.2",
     "typescript": "4.8.3"
   },
   "sideEffects": false,
